--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 <!--Canvas for FUDGE to render to-->
 <canvas class="fullscreen">
 </canvas>
+<canvas id="texture" width="200" height="200"></canvas>
 </body>
 </html>
