--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <!--Canvas for FUDGE to render to-->
 <canvas class="fullscreen">
 </canvas>
-<canvas id="texture" width="200" height="200"></canvas>
+<canvas id="texture" width="200" height="200">
+</canvas>
 </body>
 </html>
