ptg.js integrated

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <link type="resources" src="Internal.json" />
 
 <!--Load custom scripts-->
+<script src="ptg.js"></script>
 <script type="text/javascript" src="Script/Build/Script.js" editor="true"></script>
 
 <!--Load Autoview script-->
