Sound prepared and running

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <script type="text/javascript" src="../FUDGE/FudgeCore.js"></script>
   <script type="text/javascript" src="../FUDGE/FudgeAid.js"></script>
   <script type="text/javascript" src="../FUDGE/FudgeUserInterface.js"></script>
+  <script src="octo-synth/octo-synth.js" ></script>
+  <script src="octo-synth/octo-texture.js" ></script>
 
   <!--Link internal resources. The editor only loads the first, but at runtime, multiple files can contribute-->
   <link type="resources" src="Internal.json" />
