adjusted paths to FUDGE

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!--<script type="text/javascript" src="https://hs-furtwangen.github.io/FUDGE/Distribution/OimoPhysics.js"></script>-->
 
   <!--Load FUDGE. You may want to download local copies to work offline and be independent from future changes! Developers working on FUDGE itself may want to create symlinks-->
-  <script type="text/javascript" src="../FUDGE/FudgeCore.js"></script>
-  <script type="text/javascript" src="../FUDGE/FudgeAid.js"></script>
-  <script type="text/javascript" src="../FUDGE/FudgeUserInterface.js"></script>
+  <script type="text/javascript" src="FUDGE/FudgeCore.js"></script>
+  <script type="text/javascript" src="FUDGE/FudgeAid.js"></script>
+  <script type="text/javascript" src="FUDGE/FudgeUserInterface.js"></script>
   <script src="octo-synth/octo-synth.js" ></script>
   <script src="octo-synth/octo-texture.js" ></script>
 
